--- a/packages/ui/src/components/DateRangePicker/DateRangePicker.css
+++ b/packages/ui/src/components/DateRangePicker/DateRangePicker.css
@@ -79,7 +79,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: 50;
+  z-index: 9999;
   margin-top: var(--mantle-space-1);
 }
 
